[package]
name = "daljin-rust-study"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "20230815"
path = "src/20230815/main.rs"

[[bin]]
name = "20230825"
path = "src/20230825/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
regex = "1"
rand = "0.8"